--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
         <nav class="navbar">
             <div class="logo">
-                <h1>ქართული ჯიპიტი</h1>
+                <h1>QART-GPT</h1>
             </div>
             <div calss="navbar-links">
                 <ul>
-                    <li><a href="#bio">Bio</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#lit">Blog</a></li>
-                    <li><a href="#contact">Contact Me</a></li>
+                    <li><a href="#bio">Home</a></li>
+                    <li><a href="#chatbot">Start chatting</a></li>
+                    <li><a href="#top">Blog</a></li>
+                    <li><a href="/contact.html">Contact Me</a></li>
                 </ul>
             </div>
         </nav>
@@ -43,7 +43,7 @@
 
         <div id="text">
 
-            <h1>ჩვენს შესახებ</h1>
+            <h2>ჩვენს შესახებ</h2>
 
             <p>ქართ ჯიპიტი არის ქართული ჩატბოტის ვებგვერდი, რომელიც მომხმარებელს საშუალებას აძლევს, მარტივად და
                 კომფორტულად მიიღოს დახმარება და ინფორმაცია ქართულ ენაზე. ჩატბოტი შექმნილია სხვადასხვა შეკითხვაზე პასუხის
@@ -86,18 +86,7 @@
 
     </section>
 
-    <section id="contact">
-
-        <div class="contact-form">
-            <h2>კონტაქტი</h2>
-            <form action="#" method="post">
-                <input type="text" name="name" placeholder="თქვენი სახელი" required>
-                <input type="email" name="email" placeholder="თქვენი ელ. ფოსტა" required>
-                <textarea name="message" placeholder="თქვენი შეტყობინება" rows="5" required></textarea>
-                <button type="submit">გაგზავნა</button>
-            </form>
-
-    </section>
+   
 
     <section>
         <footer>
