--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 
     <div class="contact-form-container">
         <h2>Contact Me</h2>
-        <form action="#" method="POST" class="contact-form" netlify>
+        <form class="contact-form" name="contact" netlify>
             <div class="form-group">
                 <label for="name">Your Name</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name" required>
